# waveshare-lib

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/libwaveshare/: create_modbus_connection.hpp  network_scanner.hpp
src/: create_modbus_connection.cpp  network_scanner.cpp
